# epic-cicd-dev

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: _test.yml  ci.yml  publish.yml  release.yml
epic/_cicd_dev/: __init__.py
tests/: test_general.py
