[tool.poetry]
name = "epic-cicd-dev"
version = "0.0.1"
description = "Internal CI-CD development & experimentation platform"
authors = ["Yonatan Perry", "Assaf Ben-David"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epic-framework/epic-cicd-dev"
packages = [{include = "epic"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
epic-common = "*"
tqdm = {version = "*", optional = true}
google-api-core = {version = "*", optional = true}
google-cloud-bigquery = {version = "*", optional = true}
epic-jupyter = {version = "*", optional = true}

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.repositories.test-pypi]
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
